--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pygeodes"
-version = "0.1.5"
+version = "0.1.6"
 description = "A Python client for Geodes APIs"
 authors = ["CNES"]
 readme = "README.md"
@@ -21,7 +21,7 @@ aiohttp = "^3.9.5"
 boto3 = "^1.34.142"
 geopandas = "^1.0"
 aiofiles = "^24.1.0"
-ipython = "8.12.3"
+ipython = "^8.12.3"
 folium = "^0.17.0"
 rich = "^13.7.1"
 whoosh = "^2.7.4"
