--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pygeodes"
-version = "0.1.6"
+version = "0.1.7"
 description = "A Python client for Geodes APIs"
 authors = ["CNES"]
 readme = "README.md"
@@ -10,22 +10,19 @@ repository = "https://github.com/CNES/pyGeodes"
 homepage = "https://geodes.cnes.fr"
 
 [tool.poetry.dependencies]
-python = ">=3.10"
-tqdm = "^4.66.4"
-remotezip = "^0.12.3"
-validators = "^0.28.3"
-pystac = "1.8.0"
-pandas = "^2.2"
-requests = "^2.32.3"
-aiohttp = "^3.9.5"
-boto3 = "^1.34.142"
-geopandas = "^1.0"
+python = "^3.10.14"
+tqdm = "^4.66.0"
+remotezip = "^0.12.0"
+validators = ">=0.28.0"
+pystac = "^1.8.0"
+requests = "^2.32.2"
+aiohttp = "^3.9.0"
+boto3 = "^1.28.16"
+geopandas = "^1.0.0"
 aiofiles = "^24.1.0"
-ipython = "^8.12.3"
-folium = "^0.17.0"
-rich = "^13.7.1"
+ipython = "^8.12.0"
+rich = "^13.7.0"
 whoosh = "^2.7.4"
-
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "7.1.0"
